syntax = "proto3";

package tag.v1;
option go_package = "github.com/studyguides-com/study-guides-api/api/v1/tag;tagv1";

import "v1/shared/tag.proto";

message GetTagRequest {
  string id = 1;
}

message ListTagsByParentRequest {
  string parent_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}


message ListTagsByTypeRequest {
  string type = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListRootTagsRequest {
  int32 page_size = 1;
  string page_token = 2;
}


message ListTagsResponse {
  repeated shared.v1.Tag tags = 1;
  string next_page_token = 2;
}

service TagService {
    rpc GetTag(GetTagRequest) returns (shared.v1.Tag) {}
    rpc ListTagsByParent(ListTagsByParentRequest) returns (ListTagsResponse) {}
    rpc ListTagsByType(ListTagsByTypeRequest) returns (ListTagsResponse) {}
    rpc ListRootTags(ListRootTagsRequest) returns (ListTagsResponse) {} // optional: top-level tags
  }
  